--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,6 +16,14 @@ jobs:
           JFlag: '-j 2'
     timeoutInMinutes: 150
     steps:
+      # Boost
+      # Use the boost_1_75_0-msvc-14.1-64.exe for Windows 2016
+      - powershell: |
+          $Url = "https://sourceforge.net/projects/boost/files/boost-binaries/1.75.0/boost_1_75_0-msvc-14.1-64.exe"
+          (New-Object System.Net.WebClient).DownloadFile($Url, "$env:TEMP\boost.exe")
+          Start-Process -Wait -FilePath "$env:TEMP\boost.exe" "/SILENT","/SP-","/SUPPRESSMSGBOXES","/DIR=C:\hostedtoolcache\windows\Boost\1.75.0\x86_64"  
+        displayName: 'Install Boost 1.75'
+    
       # AVRO
       - powershell: |
           Invoke-WebRequest https://mirroir.wptheme.fr/apache/avro/avro-1.10.1/cpp/avro-cpp-1.10.1.tar.gz -OutFile $(Agent.TempDirectory)/avro-cpp-1.10.1.tar.gz
@@ -35,7 +43,7 @@ jobs:
             $(Build.SourcesDirectory)/avro-cpp-1.10.1
             $(Generator)
             -Wno-dev -Wno-deprecated
-            -DBoost_INCLUDE_DIR=$(BOOST_ROOT_1_72_0)/include
+            -DBoost_INCLUDE_DIR=C:/hostedtoolcache/windows/Boost/1.75.0/x86_64
             -DCMAKE_INSTALL_PREFIX=$(Agent.TempDirectory)/avro-cpp-1.10.1-install
       - task: CMake@1
         displayName: "CMake build AVRO --config $(BuildType)"
@@ -55,7 +63,7 @@ jobs:
             ..
             $(Generator)
             -Wno-dev -Wno-deprecated
-            -DBoost_INCLUDE_DIR=$(BOOST_ROOT_1_72_0)/include
+            -DBoost_INCLUDE_DIR=C:/hostedtoolcache/windows/Boost/1.75.0/x86_64
             -DAVRO_INCLUDE_DIR=$(Agent.TempDirectory)/avro-cpp-1.10.1-install/include
             -DAVRO_LIBRARY_RELEASE=$(Agent.TempDirectory)/avro-cpp-1.10.1-install/lib/avrocpp_s.lib
 
@@ -76,6 +84,14 @@ jobs:
           JFlag: '-j 2'
     timeoutInMinutes: 150
     steps:
+      # Boost
+      # Use the boost_1_75_0-msvc-14.1-64.exe for Windows 2016
+      - powershell: |
+          $Url = "https://sourceforge.net/projects/boost/files/boost-binaries/1.75.0/boost_1_75_0-msvc-14.1-64.exe"
+          (New-Object System.Net.WebClient).DownloadFile($Url, "$env:TEMP\boost.exe")
+          Start-Process -Wait -FilePath "$env:TEMP\boost.exe" "/SILENT","/SP-","/SUPPRESSMSGBOXES","/DIR=C:\hostedtoolcache\windows\Boost\1.75.0\x86_64"  
+        displayName: 'Install Boost 1.75'
+    
       # AVRO
       - powershell: |
           Invoke-WebRequest https://mirroir.wptheme.fr/apache/avro/avro-1.10.1/cpp/avro-cpp-1.10.1.tar.gz -OutFile $(Agent.TempDirectory)/avro-cpp-1.10.1.tar.gz
@@ -95,7 +111,7 @@ jobs:
             $(Build.SourcesDirectory)/avro-cpp-1.10.1
             $(Generator)
             -Wno-dev -Wno-deprecated
-            -DBoost_INCLUDE_DIR=$(BOOST_ROOT_1_72_0)/include
+            -DBoost_INCLUDE_DIR=C:/hostedtoolcache/windows/Boost/1.75.0/x86_64
             -DCMAKE_INSTALL_PREFIX=$(Agent.TempDirectory)/avro-cpp-1.10.1-install
       - task: CMake@1
         displayName: "CMake build AVRO --config $(BuildType)"
@@ -107,11 +123,6 @@ jobs:
         inputs:
           workingDirectory: $(Agent.TempDirectory)/build-avro-cpp-1.10.1
           cmakeArgs: --install .
-          
-      # Patch about https://github.com/boostorg/beast/issues/1980
-      - powershell: |
-          ((Get-Content -path $(BOOST_ROOT_1_72_0)/include/boost/beast/core/impl/file_stdio.ipp -Raw) -replace 'std::numeric_limits<long>::max','(std::numeric_limits<long>::max)') | Set-Content -Path $(BOOST_ROOT_1_72_0)/include/boost/beast/core/impl/file_stdio.ipp
-        displayName: 'Patching Beast 1.72 for MSVC'    
           
       # HDF5
       - powershell: |
@@ -166,7 +177,7 @@ jobs:
             -DZLIB_INCLUDE_DIR=C:/hdf5-1.10.6-win64-vs2017/include
             -DZLIB_LIBRARY_RELEASE=C:/hdf5-1.10.6-win64-vs2017/lib/zlib.lib
             -DSZIP_LIBRARY_RELEASE=C:/hdf5-1.10.6-win64-vs2017/lib/szip.lib
-            -DBoost_INCLUDE_DIR=$(BOOST_ROOT_1_72_0)/include
+            -DBoost_INCLUDE_DIR=C:/hostedtoolcache/windows/Boost/1.75.0/x86_64
             -DCMAKE_INSTALL_PREFIX=C:/fesapi-install
       - task: CMake@1
         displayName: "CMake build fesapi --config $(BuildType)"
@@ -186,7 +197,7 @@ jobs:
             ..
             $(Generator)
             -Wno-dev -Wno-deprecated
-            -DBoost_INCLUDE_DIR=$(BOOST_ROOT_1_72_0)/include
+            -DBoost_INCLUDE_DIR=C:/hostedtoolcache/windows/Boost/1.75.0/x86_64
             -DAVRO_INCLUDE_DIR=$(Agent.TempDirectory)/avro-cpp-1.10.1-install/include
             -DAVRO_LIBRARY_RELEASE=$(Agent.TempDirectory)/avro-cpp-1.10.1-install/lib/avrocpp_s.lib
             -DWITH_FESAPI=TRUE
@@ -215,7 +226,15 @@ jobs:
           BuildType: Release
           Generator: '-G"Visual Studio 16 2019" -A x64 -T host=x64'
           JFlag: '-j 2'
-    steps:       
+    steps:  
+      # Boost
+      # Use the boost_1_75_0-msvc-14.2-64.exe for Windows 2019
+      - powershell: |
+          $Url = "https://sourceforge.net/projects/boost/files/boost-binaries/1.75.0/boost_1_75_0-msvc-14.2-64.exe"
+          (New-Object System.Net.WebClient).DownloadFile($Url, "$env:TEMP\boost.exe")
+          Start-Process -Wait -FilePath "$env:TEMP\boost.exe" "/SILENT","/SP-","/SUPPRESSMSGBOXES","/DIR=C:\hostedtoolcache\windows\Boost\1.75.0\x86_64"  
+        displayName: 'Install Boost 1.75'
+    
       # AVRO
       - powershell: |
           Invoke-WebRequest https://mirroir.wptheme.fr/apache/avro/avro-1.10.1/cpp/avro-cpp-1.10.1.tar.gz -OutFile $(Agent.TempDirectory)/avro-cpp-1.10.1.tar.gz
@@ -235,7 +254,7 @@ jobs:
             $(Build.SourcesDirectory)/avro-cpp-1.10.1
             $(Generator)
             -Wno-dev -Wno-deprecated
-            -DBoost_INCLUDE_DIR=$(BOOST_ROOT_1_72_0)/include
+            -DBoost_INCLUDE_DIR=C:/hostedtoolcache/windows/Boost/1.75.0/x86_64
             -DCMAKE_INSTALL_PREFIX=$(Agent.TempDirectory)/avro-cpp-1.10.1-install
       - task: CMake@1
         displayName: "CMake build AVRO --config $(BuildType)"
@@ -248,11 +267,6 @@ jobs:
           workingDirectory: $(Agent.TempDirectory)/build-avro-cpp-1.10.1
           cmakeArgs: --install .
 
-      # Patch about https://github.com/boostorg/beast/issues/1980
-      - powershell: |
-          ((Get-Content -path $(BOOST_ROOT_1_72_0)/include/boost/beast/core/impl/file_stdio.ipp -Raw) -replace 'std::numeric_limits<long>::max','(std::numeric_limits<long>::max)') | Set-Content -Path $(BOOST_ROOT_1_72_0)/include/boost/beast/core/impl/file_stdio.ipp
-        displayName: 'Patching Beast 1.72 for MSVC'
-          
       - task: CMake@1
         displayName: 'CMake .. $(Generator)'
         inputs:
@@ -260,7 +274,7 @@ jobs:
             ..
             $(Generator)
             -Wno-dev -Wno-deprecated
-            -DBoost_INCLUDE_DIR=$(BOOST_ROOT_1_72_0)/include
+            -DBoost_INCLUDE_DIR=C:/hostedtoolcache/windows/Boost/1.75.0/x86_64
             -DAVRO_INCLUDE_DIR=$(Agent.TempDirectory)/avro-cpp-1.10.1-install/include
             -DAVRO_LIBRARY_RELEASE=$(Agent.TempDirectory)/avro-cpp-1.10.1-install/lib/avrocpp_s.lib
 
@@ -285,7 +299,15 @@ jobs:
           BuildType: Release
           Generator: '-G"Visual Studio 16 2019" -A x64 -T host=x64'
           JFlag: '-j 2'
-    steps:       
+    steps:   
+      # Boost
+      # Use the boost_1_75_0-msvc-14.2-64.exe for Windows 2019
+      - powershell: |
+          $Url = "https://sourceforge.net/projects/boost/files/boost-binaries/1.75.0/boost_1_75_0-msvc-14.2-64.exe"
+          (New-Object System.Net.WebClient).DownloadFile($Url, "$env:TEMP\boost.exe")
+          Start-Process -Wait -FilePath "$env:TEMP\boost.exe" "/SILENT","/SP-","/SUPPRESSMSGBOXES","/DIR=C:\hostedtoolcache\windows\Boost\1.75.0\x86_64"  
+        displayName: 'Install Boost 1.75'
+    
       # AVRO
       - powershell: |
           Invoke-WebRequest https://mirroir.wptheme.fr/apache/avro/avro-1.10.1/cpp/avro-cpp-1.10.1.tar.gz -OutFile $(Agent.TempDirectory)/avro-cpp-1.10.1.tar.gz
@@ -305,7 +327,7 @@ jobs:
             $(Build.SourcesDirectory)/avro-cpp-1.10.1
             $(Generator)
             -Wno-dev -Wno-deprecated
-            -DBoost_INCLUDE_DIR=$(BOOST_ROOT_1_72_0)/include
+            -DBoost_INCLUDE_DIR=C:/hostedtoolcache/windows/Boost/1.75.0/x86_64
             -DCMAKE_INSTALL_PREFIX=$(Agent.TempDirectory)/avro-cpp-1.10.1-install
       - task: CMake@1
         displayName: "CMake build AVRO --config $(BuildType)"
@@ -317,11 +339,6 @@ jobs:
         inputs:
           workingDirectory: $(Agent.TempDirectory)/build-avro-cpp-1.10.1
           cmakeArgs: --install .
-
-      # Patch about https://github.com/boostorg/beast/issues/1980
-      - powershell: |
-          ((Get-Content -path $(BOOST_ROOT_1_72_0)/include/boost/beast/core/impl/file_stdio.ipp -Raw) -replace 'std::numeric_limits<long>::max','(std::numeric_limits<long>::max)') | Set-Content -Path $(BOOST_ROOT_1_72_0)/include/boost/beast/core/impl/file_stdio.ipp
-        displayName: 'Patching Beast 1.72 for MSVC'
       
       # HDF5      
       - powershell: |
@@ -376,7 +393,7 @@ jobs:
             -DZLIB_INCLUDE_DIR=C:/hdf5-1.12.0-win64-vs2019/include
             -DZLIB_LIBRARY_RELEASE=C:/hdf5-1.12.0-win64-vs2019/lib/zlib.lib
             -DSZIP_LIBRARY_RELEASE=C:/hdf5-1.12.0-win64-vs2019/lib/szip.lib
-            -DBoost_INCLUDE_DIR=$(BOOST_ROOT_1_72_0)/include
+            -DBoost_INCLUDE_DIR=C:/hostedtoolcache/windows/Boost/1.75.0/x86_64
             -DAVRO_INCLUDE_DIR=$(Agent.TempDirectory)/avro-cpp-1.10.1-install/include
             -DAVRO_LIBRARY_RELEASE=$(Agent.TempDirectory)/avro-cpp-1.10.1-install/lib/avrocpp_s.lib
             -DCMAKE_INSTALL_PREFIX=C:/fesapi-install
@@ -398,7 +415,7 @@ jobs:
             ..
             $(Generator)
             -Wno-dev -Wno-deprecated
-            -DBoost_INCLUDE_DIR=$(BOOST_ROOT_1_72_0)/include
+            -DBoost_INCLUDE_DIR=C:/hostedtoolcache/windows/Boost/1.75.0/x86_64
             -DAVRO_INCLUDE_DIR=$(Agent.TempDirectory)/avro-cpp-1.10.1-install/include
             -DAVRO_LIBRARY_RELEASE=$(Agent.TempDirectory)/avro-cpp-1.10.1-install/lib/avrocpp_s.lib
             -DWITH_FESAPI=TRUE
@@ -412,9 +429,9 @@ jobs:
           cmakeArgs: --build . --config $(BuildType) -- /verbosity:minimal
           
   - job:
-    displayName: Ubuntu 16.04
+    displayName: Ubuntu 20.04
     pool:
-      vmImage: 'ubuntu-16.04'
+      vmImage: 'ubuntu-20.04'
     timeoutInMinutes: 120
     steps:
       # BOOST
@@ -440,7 +457,6 @@ jobs:
           cmakeArgs:
             $(Build.SourcesDirectory)/avro-cpp-1.10.1
             -Wno-dev -Wno-deprecated
-            -DBoost_INCLUDE_DIR=$(BOOST_ROOT_1_72_0)/include
             -DCMAKE_INSTALL_PREFIX=$(Agent.TempDirectory)/avro-cpp-1.10.1-install
       - task: CMake@1
         displayName: "CMake build AVRO"
@@ -458,7 +474,6 @@ jobs:
         inputs:
           cmakeArgs:
             -Wno-dev -Wno-deprecated
-            -DBoost_INCLUDE_DIR=$(BOOST_ROOT_1_72_0)/include
             -DAVRO_INCLUDE_DIR=$(Agent.TempDirectory)/avro-cpp-1.10.1-install/include
             -DAVRO_LIBRARY_RELEASE=$(Agent.TempDirectory)/avro-cpp-1.10.1-install/lib/libavrocpp_s.a
             -DCMAKE_BUILD_TYPE=Release
@@ -471,9 +486,9 @@ jobs:
           cmakeArgs: --build $(Build.BinariesDirectory)
           
   - job:
-    displayName: Ubuntu 16.04 with fesapi
+    displayName: Ubuntu 20.04 with fesapi
     pool:
-      vmImage: 'ubuntu-16.04'
+      vmImage: 'ubuntu-20.04'
     timeoutInMinutes: 120
     steps:
       # BOOST
@@ -499,7 +514,6 @@ jobs:
           cmakeArgs:
             $(Build.SourcesDirectory)/avro-cpp-1.10.1
             -Wno-dev -Wno-deprecated
-            -DBoost_INCLUDE_DIR=$(BOOST_ROOT_1_72_0)/include
             -DCMAKE_INSTALL_PREFIX=$(Agent.TempDirectory)/avro-cpp-1.10.1-install
       - task: CMake@1
         displayName: "CMake build AVRO"
@@ -523,14 +537,12 @@ jobs:
           cmakeArgs:
             ../fesapi
             -Wno-dev -Wno-deprecated
-            -DHDF5_1_8=TRUE
             -DHDF5_C_INCLUDE_DIR=/usr/include/hdf5/serial/
             -DHDF5_C_LIBRARY_RELEASE=/usr/lib/x86_64-linux-gnu/hdf5/serial/libhdf5.so
             -DMINIZIP_INCLUDE_DIR=/usr/include/minizip
             -DMINIZIP_LIBRARY_RELEASE=/usr/lib/x86_64-linux-gnu/libminizip.so
             -DZLIB_INCLUDE_DIR=/usr/include
             -DZLIB_LIBRARY_RELEASE=/usr/lib/x86_64-linux-gnu/libz.so
-            -DBoost_INCLUDE_DIR=$(BOOST_ROOT_1_72_0)/include
             -DCMAKE_BUILD_TYPE=Release
       - task: CMake@1
         displayName: "CMake build fesapi"
@@ -548,7 +560,6 @@ jobs:
         inputs:
           cmakeArgs:
             -Wno-dev -Wno-deprecated
-            -DBoost_INCLUDE_DIR=$(BOOST_ROOT_1_72_0)/include
             -DAVRO_INCLUDE_DIR=$(Agent.TempDirectory)/avro-cpp-1.10.1-install/include
             -DAVRO_LIBRARY_RELEASE=$(Agent.TempDirectory)/avro-cpp-1.10.1-install/lib/libavrocpp_s.a
             -DWITH_FESAPI=TRUE
